God, do not force curly braces either

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,7 @@
 {
     "asi": true,
     "boss": true,
-    "curly": true,
+    "curly": false,
     "eqeqeq": true,
     "eqnull": true,
     "expr": true,
